Fixed channel names overlapping servers

--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -1737,3 +1737,6 @@ body>div:last-of-type {
     color: #fff;
 }
 
+.content-98HsJk {
+    padding-left: 54px;
+}
